add theme toggle for dark mode, adjust the height of the top bar

--- a/_includes/site/header.html
+++ b/_includes/site/header.html
@@ -22,5 +22,15 @@
         {% endfor %}
       </ul>
     </nav>
+
+    <button
+      class="theme-toggle"
+      type="button"
+      aria-label="Switch to dark theme"
+      title="Toggle theme"
+      data-theme-toggle
+    >
+      <span aria-hidden="true">☾</span>
+    </button>
   </div>
 </header>
